@@ -110,3 +110,4 @@ Added 'Search For Definition' entry to toolbar - same as 'Navigation->Search For
 
 0.0.16
 Added Recent File menu.
+Added multiple select fiile open.
